APCU extension enabled laminas cache installed

--- a/service-api/app/composer.json
+++ b/service-api/app/composer.json
@@ -41,24 +41,25 @@
     "require": {
         "php": "^8.1",
         "ext-apcu": "*",
+        "alphagov/notifications-php-client": "^4.1.0",
         "aws/aws-sdk-php": "^3.93",
+        "blazon/psr11-monolog": "^4.0",
         "elie29/zend-phpdi-config": "^8.0",
         "guzzlehttp/guzzle": "^6.3",
+        "laminas/laminas-cache-storage-adapter-apcu": "^2.4",
+        "laminas/laminas-component-installer": "^2.1.1",
+        "laminas/laminas-config-aggregator": "^1.0",
+        "laminas/laminas-diactoros": "^2.24",
+        "laminas/laminas-stdlib": "^3.1",
+        "mezzio/mezzio": "^3.0.1",
+        "mezzio/mezzio-fastroute": "^3.0",
+        "mezzio/mezzio-helpers": "^5.0",
         "paragonie/constant_time_encoding": "^2.2",
         "paragonie/hidden-string": "^1.0",
         "php-http/guzzle6-adapter": "^2.0",
         "psr/http-client-implementation": "^1.0",
         "ramsey/uuid": "^4.0",
-        "symfony/console": "^6.1",
-        "laminas/laminas-component-installer": "^2.1.1",
-        "laminas/laminas-config-aggregator": "^1.0",
-        "laminas/laminas-diactoros": "^2.24",
-        "mezzio/mezzio": "^3.0.1",
-        "mezzio/mezzio-fastroute": "^3.0",
-        "mezzio/mezzio-helpers": "^5.0",
-        "laminas/laminas-stdlib": "^3.1",
-        "blazon/psr11-monolog": "^4.0",
-        "alphagov/notifications-php-client": "^4.1.0"
+        "symfony/console": "^6.1"
     },
     "require-dev": {
         "behat/behat": "^3.5",
