additional laminas-cache installation

--- a/service-api/app/composer.json
+++ b/service-api/app/composer.json
@@ -46,8 +46,8 @@
         "blazon/psr11-monolog": "^4.0",
         "elie29/zend-phpdi-config": "^8.0",
         "guzzlehttp/guzzle": "^6.3",
+        "laminas/laminas-cache": "^3.11",
         "laminas/laminas-cache-storage-adapter-apcu": "^2.4",
-        "laminas/laminas-component-installer": "^2.1.1",
         "laminas/laminas-config-aggregator": "^1.0",
         "laminas/laminas-diactoros": "^2.24",
         "laminas/laminas-stdlib": "^3.1",
@@ -65,6 +65,7 @@
         "behat/behat": "^3.5",
         "cooperaj/behat-psr-extension": "^2.0",
         "filp/whoops": "^2.1.12",
+        "laminas/laminas-component-installer": "^3.3",
         "laminas/laminas-development-mode": "^3.1",
         "mezzio/mezzio-tooling": "^2.5",
         "phpspec/prophecy": "^1.15",
