--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -191,6 +191,7 @@ services:
       dockerfile: service-api/docker/app/Dockerfile
     depends_on:
       - dynamodb-local
+      - localstack
     volumes:
       - ./service-api/app:/app
     networks:
@@ -216,6 +217,7 @@ services:
       # Local only
       AWS_ACCESS_KEY_ID: "devkey"
       AWS_ENDPOINT_DYNAMODB: http://dynamodb-local:8000
+      AWS_ENDPOINT_SECRETSMANAGER: http://localstack:4566
       AWS_SECRET_ACCESS_KEY: "secretdevkey"
       LPA_CODES_STATIC_AUTH_TOKEN: asdf1234567890
       PACT_BROKER_PUBLISH: "false"
