--- a/service-front/docker/app/Dockerfile
+++ b/service-front/docker/app/Dockerfile
@@ -3,6 +3,8 @@
 #
 FROM php:8.1.23-fpm-alpine3.18 AS php-base
 
+ENV OPG_PHP_POOL_CHILDREN_MAX="25"
+
 COPY --from=mlocati/php-extension-installer /usr/bin/install-php-extensions /usr/bin/
 
 RUN set -xe \
