--- a/service-front/docker/app/fpm-pool.ini
+++ b/service-front/docker/app/fpm-pool.ini
@@ -25,3 +25,6 @@
 ; }
 access.format = '{"time_local":"%{%Y-%m-%dT%H:%M:%S%z}T","client_ip":"%{HTTP_X_FORWARDED_FOR}e","remote_addr":"%R","remote_user":"%u","request":"%m %{REQUEST_URI}e %{SERVER_PROTOCOL}e","status":"%s","body_bytes_sent":"%l","request_time":"%d","request_memory":"%{mega}M","http_referrer":"%{HTTP_REFERER}e","http_user_agent":"%{HTTP_USER_AGENT}e","service_name":"front","request_id":"%{HTTP_X_AMZN_TRACE_ID}e"}'
 ping.path = /ping
+
+pm = static
+pm.max_children = ${OPG_PHP_POOL_CHILDREN_MAX}
