--- a/service-api/docker/app/Dockerfile
+++ b/service-api/docker/app/Dockerfile
@@ -5,6 +5,8 @@ FROM php:8.1.23-fpm-alpine3.18 AS php-base
 
 COPY --from=mlocati/php-extension-installer /usr/bin/install-php-extensions /usr/bin/
 
+ENV OPG_PHP_POOL_CHILDREN_MAX="25"
+
 RUN set -xe \
   && apk add --update --no-cache fcgi \
   && install-php-extensions apcu \
