--- a/service-api/app/composer.json
+++ b/service-api/app/composer.json
@@ -48,7 +48,8 @@
         "elie29/zend-phpdi-config": "^8.0",
         "facile-it/php-openid-client": "^0.3.4",
         "guzzlehttp/guzzle": "^6.3",
-        "laminas/laminas-component-installer": "^2.1.1",
+        "laminas/laminas-cache": "^3.11",
+        "laminas/laminas-cache-storage-adapter-apcu": "^2.4",
         "laminas/laminas-config-aggregator": "^1.0",
         "laminas/laminas-diactoros": "^2.24",
         "laminas/laminas-stdlib": "^3.1",
@@ -67,6 +68,7 @@
         "behat/behat": "^3.5",
         "cooperaj/behat-psr-extension": "^2.0",
         "filp/whoops": "^2.1.12",
+        "laminas/laminas-component-installer": "^3.3",
         "laminas/laminas-development-mode": "^3.1",
         "mezzio/mezzio-tooling": "^2.5",
         "phpspec/prophecy": "^1.15",
@@ -79,6 +81,22 @@
         "squizlabs/php_codesniffer": "^3.0",
         "vimeo/psalm": "^4.19",
         "webimpress/coding-standard": "^1.0"
+    },
+    "replace": {
+        "laminas/laminas-cache-storage-adapter-apc": "*",
+        "laminas/laminas-cache-storage-adapter-blackhole": "*",
+        "laminas/laminas-cache-storage-adapter-dba": "*",
+        "laminas/laminas-cache-storage-adapter-ext-mongodb": "*",
+        "laminas/laminas-cache-storage-adapter-filesystem": "*",
+        "laminas/laminas-cache-storage-adapter-memcache": "*",
+        "laminas/laminas-cache-storage-adapter-memcached": "*",
+        "laminas/laminas-cache-storage-adapter-memory": "*",
+        "laminas/laminas-cache-storage-adapter-mongodb": "*",
+        "laminas/laminas-cache-storage-adapter-redis": "*",
+        "laminas/laminas-cache-storage-adapter-session": "*",
+        "laminas/laminas-cache-storage-adapter-wincache": "*",
+        "laminas/laminas-cache-storage-adapter-xcache": "*",
+        "laminas/laminas-cache-storage-adapter-zend-server": "*"
     },
     "autoload": {
         "psr-4": {
