--- a/docker-compose.dependencies.yml
+++ b/docker-compose.dependencies.yml
@@ -102,9 +102,8 @@ services:
 
   mock-one-login:
     container_name: mock-one-login
-    image: mock-one-login
-    build:
-      context: mock-integrations/one-login
+    image: 311462405659.dkr.ecr.eu-west-1.amazonaws.com/use_an_lpa/mock_onelogin_app
+    platform: linux/amd64
     ports:
       - "4013:8080"
     environment:
