UML-3138 Move TF account to region (#2379)
* UML-3138 Move TF account to region

* UML-3146 Disable apply shared TF in PR workflow

--- a/.github/workflows/path-to-live.yml
+++ b/.github/workflows/path-to-live.yml
@@ -108,7 +108,9 @@ jobs:
     with:
       workspace: development
       terraform_path: account
-      apply: true
+      # TODO: Remove this line when ready to apply - temporarily disabled to prevent accidental changes
+      apply: false
+      # apply: true
       specific_path: all
     secrets: inherit
 
@@ -120,7 +122,9 @@ jobs:
     with:
       workspace: preproduction
       terraform_path: account
-      apply: true
+      # TODO: Remove this line when ready to apply - temporarily disabled to prevent accidental changes
+      apply: false
+      # apply: true
       specific_path: all
     secrets: inherit
 
@@ -162,7 +166,9 @@ jobs:
     with:
       workspace: production
       terraform_path: account
-      apply: true
+      # TODO: Remove this line when ready to apply. Temporarily disabled to prevent accidental changes
+      apply: false
+      # apply: true
       specific_path: all
     secrets: inherit
 
