--- a/lambda-functions/upload-statistics/Dockerfile
+++ b/lambda-functions/upload-statistics/Dockerfile
@@ -5,7 +5,7 @@ FROM python:3.11.3-alpine3.18 AS python-alpine
 RUN apk add --no-cache \
     libstdc++
 
-# Upgrade insecure packages (can't use alpine 3.17 as no libexecinfo-dev)
+# Upgrade insecure packages
 RUN apk update && apk upgrade expat krb5-libs libcrypto1.1 libssl1.1 libcom_err ncurses
 RUN pip install setuptools --upgrade
 
@@ -17,7 +17,7 @@ RUN apk add --no-cache \
     libtool \
     autoconf \
     automake \
-    libexecinfo-dev \
+    elfutils-dev \
     make \
     cmake \
     libcurl
