Refactor work, rename redirect url and store ui_locale in authsession

--- a/docker-compose.dependencies.yml
+++ b/docker-compose.dependencies.yml
@@ -109,4 +109,4 @@ services:
     environment:
       PUBLIC_URL: http://localhost:4013
       INTERNAL_URL: http://mock-one-login:8080
-      REDIRECT_URL: http://localhost:9002/auth/redirect
+      REDIRECT_URL: http://localhost:9002/home/login
