--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,10 +39,7 @@ services:
       dockerfile: service-front/docker/web/Dockerfile
     volumes:
       - webpack_dist:/web
-    ports:
-      - 9001:80
     environment:
-      WEB_DOMAIN: http://localhost:9001
       APP_HOST: viewer-app
       APP_PORT: 9000
       NGINX_LOG_LEVEL: warn
@@ -85,6 +82,25 @@ services:
     depends_on:
       - redis
 
+  viewer-ssl:
+    container_name: viewer-ssl
+    image: viewer-ssl
+    depends_on:
+      - viewer-web
+    build:
+      context: ./
+      dockerfile: local-ssl/docker/Dockerfile
+    ports:
+      - 9001:443
+    volumes:
+      - ./local-ssl/certs:/etc/nginx/certs
+    environment:
+      DOMAIN: "localhost"
+      TARGET_HOST_HEADER: "localhost:9001"
+      SSL_PORT: "443"
+      TARGET_HOST: "viewer-web"
+      TARGET_PORT: "80"
+
   # ---------------------------
   # Actor Front
 
@@ -96,10 +112,7 @@ services:
       dockerfile: service-front/docker/web/Dockerfile
     volumes:
       - webpack_dist:/web
-    ports:
-      - 9002:80
     environment:
-      WEB_DOMAIN: http://localhost:9002
       APP_HOST: actor-app
       APP_PORT: 9000
       NGINX_LOG_LEVEL: warn
@@ -144,6 +157,25 @@ services:
       COOKIE_EXPIRES: 1440 # cookie expiry for complete logout - initial value to be 24 hours.
       COOKIE_SECURE: "false"
       NOTIFY_API_KEY:
+
+  actor-ssl:
+    container_name: actor-ssl
+    image: actor-ssl
+    depends_on:
+      - actor-web
+    build:
+      context: ./
+      dockerfile: local-ssl/docker/Dockerfile
+    ports:
+      - 9002:443
+    volumes:
+      - ./local-ssl/certs:/etc/nginx/certs
+    environment:
+      DOMAIN: "localhost"
+      TARGET_HOST_HEADER: "localhost:9002"
+      SSL_PORT: "443"
+      TARGET_HOST: "actor-web"
+      TARGET_PORT: "80"
 
   # ---------------------------
   # Front Composer (Shared)
