--- a/local-ssl/docker/nginx.conf.template
+++ b/local-ssl/docker/nginx.conf.template
@@ -25,8 +25,8 @@ http {
         listen ${SSL_PORT} ssl;
 
         client_max_body_size ${CLIENT_MAX_BODY_SIZE};
-        ssl_certificate     /etc/nginx/certs/cert.pem;
-        ssl_certificate_key /etc/nginx/certs/key.pem;
+        ssl_certificate     /etc/nginx/certs/localhost.pem;
+        ssl_certificate_key /etc/nginx/certs/localhost.key;
 
         ssl_session_cache  builtin:1000  shared:SSL:10m;
         ssl_protocols  TLSv1.2 TLSv1.3;
