trust ca in smoke tests

--- a/tests/smoke/Dockerfile
+++ b/tests/smoke/Dockerfile
@@ -2,6 +2,8 @@ FROM php:8.1-cli-alpine
 
 COPY --from=mlocati/php-extension-installer /usr/bin/install-php-extensions /usr/bin/
 COPY --from=composer /usr/bin/composer /usr/bin/
+COPY ./local-ssl/certs/ca.pem /tmp/ca.pem
+RUN cat /tmp/ca.pem >> /etc/ssl/certs/ca-certificates.crt
 
 RUN set -xe \
   && apk add --update --no-cache chromium \
