--- a/docker-compose.testing.yml
+++ b/docker-compose.testing.yml
@@ -21,10 +21,10 @@ services:
       - ./tests/smoke:/app
       - ./tests/features:/app/features
     environment:
-      BEHAT_VIEWER_URL: https://viewer-web
+      BEHAT_VIEWER_URL: https://viewer-ssl
       BEHAT_ACTOR_URL: http://actor-web
-      BEHAT_OLD_VIEWER_URL: https://viewer-web
-      BEHAT_OLD_ACTOR_URL: http://actor-web
+      BEHAT_OLD_VIEWER_URL: https://viewer-ssl
+      BEHAT_OLD_ACTOR_URL: http//actor-web
       XDEBUG_CONFIG: client_host=host.docker.internal client_port=9000
       XDEBUG_MODE: develop,debug,coverage
 
