--- a/docker-compose.dependencies.yml
+++ b/docker-compose.dependencies.yml
@@ -103,11 +103,11 @@ services:
 
   mock-one-login:
     container_name: mock-one-login
-    image: 311462405659.dkr.ecr.eu-west-1.amazonaws.com/use_an_lpa/mock_onelogin_app
-    platform: linux/amd64
+    image: 311462405659.dkr.ecr.eu-west-1.amazonaws.com/use_an_lpa/mock_onelogin_app:v0.46.0
     ports:
       - "4013:8080"
     environment:
       PUBLIC_URL: http://localhost:4013
       INTERNAL_URL: http://mock-one-login:8080
       REDIRECT_URL: http://localhost:9002/home/login
+      CLIENT_ID: client-id
