--- a/.github/workflows/pull-request-path.yml
+++ b/.github/workflows/pull-request-path.yml
@@ -124,6 +124,19 @@ jobs:
       (needs.node_build.result == 'success' || needs.node_build.result == 'skipped') &&
       needs.workflow_variables.result == 'success'
 
+  code_coverage:
+    name: upload to code coverage
+    uses: ./.github/workflows/_codecov.yml
+    with:
+      specific_path: ${{ needs.workflow_variables.outputs.specific_path }}
+    needs:
+      - docker_build_scan_push
+      - workflow_variables
+    secrets: inherit
+    if: |
+      always() &&
+      ( needs.docker_build_scan_push.result == 'success' || needs.docker_build_scan_push.result == 'failure' )
+
   terraform_apply_shared_development:
     name: terraform apply shared development
     uses: ./.github/workflows/_run-terraform.yml
@@ -223,19 +236,6 @@ jobs:
     if: |
       always() &&
       needs.run_behat_suite.result == 'success'
-
-  code_coverage:
-    name: upload to code coverage
-    uses: ./.github/workflows/_codecov.yml
-    with:
-      specific_path: ${{ needs.workflow_variables.outputs.specific_path }}
-    needs:
-      - docker_build_scan_push
-      - workflow_variables
-    secrets: inherit
-    if: |
-      always() &&
-      needs.docker_build_scan_push.result == 'success'
 
   ecr_scan_results:
     name: ecr scan results
