--- a/docker-compose.dependencies.yml
+++ b/docker-compose.dependencies.yml
@@ -43,7 +43,7 @@ services:
   kms:
     image: nsmithuk/local-kms:3
     volumes:
-      - ./local-config:/init
+      - ./local-config/kms:/init
     environment:
       KMS_REGION: eu-west-1
       KMS_SEED_PATH: /init/kms-seed.yaml
