--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,8 +39,6 @@ services:
       dockerfile: service-front/docker/web/Dockerfile
     volumes:
       - webpack_dist:/web
-    ports:
-      - 9001:80
     environment:
       WEB_DOMAIN: http://localhost:9001
       APP_HOST: viewer-app
@@ -96,8 +94,6 @@ services:
       dockerfile: service-front/docker/web/Dockerfile
     volumes:
       - webpack_dist:/web
-    ports:
-      - 9002:80
     environment:
       WEB_DOMAIN: http://localhost:9002
       APP_HOST: actor-app
@@ -282,3 +278,16 @@ services:
     ports:
       - 9007:8080
     entrypoint: /aws-lambda/aws-lambda-rie /usr/local/bin/python -m awslambdaric app.upload-statistics.lambda_handler
+
+  proxy:
+    container_name: proxy
+    image: traefik:v2.10
+    ports:
+      - "9001:9001"
+      - "9041:9041"
+      - "9002:9002"
+      - "9042:9042"
+      - "9080:8080"
+    volumes:
+      - ./local-config/proxy/traefik.toml:/etc/traefik/traefik.toml
+      - ./local-config/proxy/dynamic.toml:/etc/traefik/dynamic.toml
