--- a/docker-compose.testing.yml
+++ b/docker-compose.testing.yml
@@ -25,6 +25,7 @@ services:
       BEHAT_ACTOR_URL: http://proxy:9002
       BEHAT_OLD_VIEWER_URL: http://proxy:9001
       BEHAT_OLD_ACTOR_URL: http://proxy:9002
+      BEHAT_PARAMS: '{"extensions":{"Smoke\\SmokeExtension":{"allow_insecure_https":true}}}'
       XDEBUG_CONFIG: client_host=host.docker.internal client_port=9000
       XDEBUG_MODE: develop,debug,coverage
 
