--- a/.github/workflows/pull-request-path.yml
+++ b/.github/workflows/pull-request-path.yml
@@ -92,7 +92,8 @@ jobs:
     secrets: inherit
     if: |
       always() &&
-      needs.workflow_variables.result == 'success'
+      needs.workflow_variables.result == 'success' &&
+      needs.workflow_variables.outputs.specific_path != 'docs'
 
   node_test:
     name: test node dependencies
@@ -185,7 +186,7 @@ jobs:
       needs.workflow_variables.result == 'success'
 
   terraform_preproduction_plan_environment:
-    name: terraform apply environment
+    name: terraform plan preproduction environment
     uses: ./.github/workflows/_run-terraform.yml
     needs:
       - docker_build_scan_push
@@ -260,17 +261,6 @@ jobs:
       always() &&
       needs.code_coverage.result == 'success' &&
       needs.terraform_apply_environment.result == 'success'
-  
-  docs_update:
-    name: update documentation
-    uses: ./.github/workflows/documentation-update.yml
-    needs:
-      - workflow_variables
-    with:
-      specific_path: ${{ needs.workflow_variables.outputs.specific_path }}
-      branch_name: ${{ needs.workflow_variables.outputs.parsed_branch }}
-    if: |
-      needs.workflow_variables.outputs.specific_path == 'docs'
 
   # Required end of workflow job
   end_of_workflow:
