UML-2140: add docs only changes

--- a/.github/workflows/pull-request-path.yml
+++ b/.github/workflows/pull-request-path.yml
@@ -81,6 +81,17 @@ jobs:
         run: |
           echo "path chosen - $SPECIFIC_PATH"
 
+  update_documentation:
+    name: update documentation
+    runs-on: ubuntu-latest
+    needs:
+      - workflow_variables
+    steps:
+      - name: only update documentation
+        run: echo 'Only docs have changed - skipping rest of pipeline'
+    if: |
+      needs.workflow_variables.outputs.specific_path == 'docs'
+
   terraform_lint:
     name: lint terraform code
     uses: ./.github/workflows/_lint-terraform.yml
@@ -271,14 +282,20 @@ jobs:
       - slack_notify
       - workflow_variables
       - workspace_name
+      - update_documentation
     steps:
       - name: workflow has ended without issue
         run: |
-          echo "${{ needs.workflow_variables.outputs.parsed_branch }} PR environment tested, built and deployed"
-          echo "Tag Used: ${{ needs.workflow_variables.outputs.parsed_branch }}-${{ needs.workflow_variables.outputs.short_sha }}"
-          echo "URL: https://${{ needs.workspace_name.outputs.name }}.use-lasting-power-of-attorney.service.gov.uk"
+          if [[ ${{ needs.workflow_variables.outputs.specific_path }} = 'docs']]; then
+            echo 'Ending docs workflow'
+          else
+            echo "${{ needs.workflow_variables.outputs.parsed_branch }} PR environment tested, built and deployed"
+            echo "Tag Used: ${{ needs.workflow_variables.outputs.parsed_branch }}-${{ needs.workflow_variables.outputs.short_sha }}"
+            echo "URL: https://${{ needs.workspace_name.outputs.name }}.use-lasting-power-of-attorney.service.gov.uk"
+          fi
     if: |
       always() &&
-      needs.ecr_scan_results.result == 'success' &&
-      needs.slack_notify.result == 'success' &&
-      needs.workflow_variables.result == 'success'
+      ((needs.ecr_scan_results.result == 'success' || needs.ecr_scan_results.result == 'skipped') &&
+      (needs.slack_notify.result == 'success' || needs.slack_notify.result == 'skipped') &&
+      needs.workflow_variables.result == 'success') ||
+      needs.update_documentation.result == 'success'
